--- a/src/partials/modalprice.html
+++ b/src/partials/modalprice.html
@@ -1,6 +1,6 @@
 <!-- ----------Room Price Modal window---------- -->
 
-<section class="price-modal modal" data-modal="modalprice">
+<div class="price-modal modal" data-modal="modalprice">
   <div class="modal-container price-modal-wrap">
     <button type="button" class="modal-close js-modal-close">
       <svg class="modal-close-icon" width="24" height="24">
@@ -57,4 +57,4 @@
       </div>
     </form>
   </div>
-</section>
+</div>
