--- a/src/partials/modalroom.html
+++ b/src/partials/modalroom.html
@@ -1,6 +1,6 @@
 <!-- ---------Book Room Modal window--------- -->
 
-<section class="book-room-modal modal" data-modal="modalroom">
+<div class="book-room-modal modal" data-modal="modalroom">
   <div class="modal-container book-room">
     <button type="button" class="modal-close js-modal-close">
       <svg class="modal-close-icon" width="24" height="24">
@@ -101,4 +101,4 @@
       </div>
     </form>
   </div>
-</section>
+</div>
