--- a/src/partials/modaltable.html
+++ b/src/partials/modaltable.html
@@ -1,5 +1,5 @@
 <!-- ------------Book Table Modal window------------ -->
-<section class="book-table-modal modal" data-modal="modaltable">
+<div class="book-table-modal modal" data-modal="modaltable">
   <div class="modal-container book-table">
     <button type="button" class="modal-close js-modal-close">
       <svg class="modal-close-icon" width="24" height="24">
@@ -81,4 +81,4 @@
       </div>
     </form>
   </div>
-</section>
+</div>
