--- a/src/css/aboutkitchen.css
+++ b/src/css/aboutkitchen.css
@@ -79,12 +79,27 @@
 
 .pexels-slider {
   margin-top: 32px;
-  margin-bottom: 72px;
+  /* margin-bottom: 72px; */
 }
 .slider-pic {
+  margin-bottom: 28px;
   display: flex;
   gap: 24px;
   justify-content: end;
+}
+
+
+.slider-arrows{
+  padding-right: 28px;
+  text-align: end;
+}
+.icon-arrow {
+  transition: fill var(--timing-function);
+}
+.icon-arrow:hover,
+.icon-arrow:focus,
+.icon-arrow:active {
+fill: var(--second-gold-color);
 }
 
 
@@ -118,6 +133,7 @@
   .kitchen-section.container {
     width: 1024px;
     padding-top: 120px;
+    padding-bottom: 40px;
   }
   .kitchen-section {
     width: 100%;
@@ -159,9 +175,10 @@
 
   .pexels-slider {
     margin-top: -28px;
-    margin-bottom: 96px;
+    /* margin-bottom: 96px; */
   }
   .slider-pic {
+    margin-bottom: 40px;
     /* display: flex; */
     gap: 40px;
   }
@@ -192,7 +209,10 @@
 
   .pexels-slider {
     margin-top: -151px;
-    margin-bottom: 104px;
+    /* margin-bottom: 104px; */
+  }
+  .slider-pic {
+    margin-bottom: 48px;
   }
 }
 
