--- a/src/partials/aboutkitchen.html
+++ b/src/partials/aboutkitchen.html
@@ -170,5 +170,15 @@
           </picture>
         </li>
       </ul>
+      
+      <div class="slider-arrows">
+        <svg class="icon-arrow" width="32" height="32">
+            <use href="./img/icons.svg#arrow-left"></use>
+        </svg>
+        <svg class="icon-arrow" width="32" height="32">
+            <use href="./img/icons.svg#arrow-right"></use>
+        </svg>
+    </div>
+
     </div>
   </section>
