--- a/src/css/hero4.css
+++ b/src/css/hero4.css
@@ -1,9 +1,8 @@
 /* <!-- ---------Room Page Hero--------- --> */
 
 .room-hero {
-  position: relative;
-  padding-bottom: 118px;
-  padding-top: 286px;
+  padding-top: 55px;
+  padding-bottom: 101px;
   background-image: linear-gradient(
       180deg,
       #000000 0%,
@@ -30,9 +29,14 @@
   }
 }
 
+.room-hero > .container {
+  position: relative;
+}
+
 .room-hero-arrows {
   display: flex;
   justify-content: space-between;
+  padding-top: 296px;
   margin-bottom: 93px;
 }
 .golden-arrows {
@@ -57,6 +61,7 @@
   letter-spacing: 0.05em;
   color: var(--primary-white-color);
 }
+
 .room-hero-text {
   margin-bottom: 17px;
   margin-right: 59px;
@@ -67,11 +72,16 @@
   color: var(--primary-white-color);
 }
 
+.room-hero-address {
+  right: 15px;
+  top: 0px;
+}
+
 .room-hero .maps-link {
   display: flex;
   align-items: center;
   width: fit-content;
-  padding: 8px 5px 8px 8px;
+  padding: 8px 11px 9px 11px;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -136,36 +146,17 @@
 
 /* ---------------Mobile-------------- */
 
-@media screen and (max-width: 414px) {
-  .room-hero-address {
-    right: 15px;
-    top: 60px;
-  }
-
+@media screen and (max-width: 413px) {
   .room-hero-button {
     transform: translate(55px, 20px);
   }
 }
 
 @media screen and (min-width: 414px) and (max-width: 1023.5px) {
-  .room-hero-address {
-    transform: translateY(-519px) translateX(173px);
-  }
-
   .room-hero-button {
     transform: translate(85px, 20px);
   }
-}
 
-@media screen and (max-width: 1023.5px) {
-  .room-hero-address {
-    position: absolute;
-  }
-}
-
-/* --------------Tablet--------------- */
-
-@media screen and (min-width: 1024px) {
   .room-hero {
     background-image: linear-gradient(
         180deg,
@@ -189,10 +180,46 @@
         url(../img/room_hero_bg_tab_2x.jpg);
     }
   }
+}
 
+@media screen and (max-width: 1023.5px) {
+  .room-hero-address {
+    position: absolute;
+  }
+}
+
+/* --------------Tablet--------------- */
+
+@media screen and (min-width: 1024px) {
   .room-hero {
-    padding-top: 341px;
-    padding-bottom: 18px;
+    padding-top: 59px;
+    padding-bottom: 22px;
+    background-image: linear-gradient(
+        180deg,
+        #000000 0%,
+        rgba(0, 0, 0, 0.55) 10%,
+        rgba(0, 0, 0, 0) 20%
+      ),
+      url(../img/room_hero_bg_desk_1x.jpg);
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .room-hero {
+      background-image: linear-gradient(
+          180deg,
+          #000000 0%,
+          rgba(0, 0, 0, 0.55) 10%,
+          rgba(0, 0, 0, 0) 20%
+        ),
+        url(../img/room_hero_bg_desk_2x.jpg);
+    }
+  }
+
+  .room-hero-arrows {
+    padding-top: 282px;
+    margin-bottom: 88px;
   }
 
   .room-hero-title {
@@ -232,32 +259,12 @@
 
 @media screen and (min-width: 1280px) {
   .room-hero {
-    background-image: linear-gradient(
-        180deg,
-        #000000 0%,
-        rgba(0, 0, 0, 0.55) 10%,
-        rgba(0, 0, 0, 0) 20%
-      ),
-      url(../img/room_hero_bg_desk_1x.jpg);
-  }
-
-  @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    .room-hero {
-      background-image: linear-gradient(
-          180deg,
-          #000000 0%,
-          rgba(0, 0, 0, 0.55) 10%,
-          rgba(0, 0, 0, 0) 20%
-        ),
-        url(../img/room_hero_bg_desk_2x.jpg);
-    }
-  }
-
-  .room-hero {
-    padding-top: 353px;
     padding-bottom: 48px;
+  }
+
+  .room-hero-arrows {
+    padding-top: 353px;
+    margin-bottom: 72px;
   }
 
   .room-hero-text {
@@ -270,6 +277,6 @@
   }
 
   .room-hero-button {
-    transform: translate(875px, -100px);
+    transform: translate(875px, -65px);
   }
 }
