--- a/src/partials/aboutrest.html
+++ b/src/partials/aboutrest.html
@@ -48,6 +48,11 @@
                 mollit. Exercitation veniam consequat sunt nostrud amet.</p>
         </div>
         <div class="about-img">
+            <button type="button" class="arrowperv">
+                <svg class="arrow-icon"  width="32" height="32">
+                    <use href="../img/icons.svg#arrow-left"></use>
+                </svg>
+            </button>
             <div class="slider">
                 <div class="slider-item">
                     <picture>
@@ -141,6 +146,11 @@
                     </picture>
                 </div>
             </div>
+            <button type="button" class="arrownext">
+                <svg class="arrow-icon" width="32" height="32">
+                    <use href="../img/icons.svg#arrow-right"></use>
+                </svg>
+            </button>
         </div>
     </div>
 </section>
