--- a/src/css/aboutrest.css
+++ b/src/css/aboutrest.css
@@ -17,6 +17,27 @@
   height: 32px;
   border: none;
 }
+.arrowperv,.arrownext{
+  background-color: transparent;
+  border: none;
+  position: absolute;
+}
+.arrowperv{
+  bottom: -40px;
+right: 64px;
+}
+
+.arrownext{
+  bottom: -40px;
+  right: 0;
+}
+.arrow-icon{
+  fill: #000000;
+}
+.arrow-icon:hover{
+  fill: #F3C653;
+
+}
 /* Ограничивающая оболочка */
 
 /* Лента слайдов */
@@ -121,6 +142,7 @@
   min-width: 0;
   /* margin-bottom: 20px; */
 }
+
 .about-arrow {
   display: flex;
   gap: 32px;
