--- a/src/partials/aboutrest.html
+++ b/src/partials/aboutrest.html
@@ -50,7 +50,7 @@
         <div class="about-img">
             <button type="button" class="arrowperv">
                 <svg class="arrow-icon"  width="32" height="32">
-                    <use href="../img/icons.svg#arrow-left"></use>
+                    <use href="./img/icons.svg#arrow-left"></use>
                 </svg>
             </button>
             <div class="slider">
@@ -148,7 +148,7 @@
             </div>
             <button type="button" class="arrownext">
                 <svg class="arrow-icon" width="32" height="32">
-                    <use href="../img/icons.svg#arrow-right"></use>
+                    <use href="./img/icons.svg#arrow-right"></use>
                 </svg>
             </button>
         </div>
