Connected fonts via font-face
Connected fonts via font-face

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -54,6 +54,7 @@
 .hero-button,
 .hero-button-link {
   color: #f3c653;
+  font-family: inherit;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
