--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -25,6 +25,26 @@
   font-family: Film P3;
   src: url(../fonts/FontsFree-Net-FilmP3.ttf);
 }
+@font-face {
+  font-family: Montserrat-300;
+  src: url(../fonts/Montserrat-Light.ttf);
+}
+@font-face {
+  font-family: Montserrat-400;
+  src: url(../fonts/Montserrat-Regular.ttf);
+}
+@font-face {
+  font-family: Montserrat-500;
+  src: url(../fonts/Montserrat-Medium.ttf);
+}
+@font-face {
+  font-family: Montserrat-600;
+  src: url(../fonts/Montserrat-SemiBold.ttf);
+}
+@font-face {
+  font-family: Montserrat-700;
+  src: url(../fonts/Montserrat-Bold.ttf);
+}
 
 :root {
   /* --------Перший фон-------- */
