--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -59,7 +59,8 @@
         </tr>
         <tr class="restaurant-menu-row">
           <td class="restaurant-menu-cell4 last-cell">
-            Ніжна горбуша, вершковий соус на основі білого вина
+            Ніжна горбуша, вершковий соус на основі <br />
+            білого вина
           </td>
         </tr>
         <tr class="restaurant-menu-row">
@@ -108,8 +109,10 @@
         </tr>
         <tr class="restaurant-menu-row">
           <td class="restaurant-menu-cell1">Крильця курячі в медовому соусі</td>
-          <td class="restaurant-menu-cell2" rowspan="2">400 г</td>
-          <td class="restaurant-menu-cell3" rowspan="2">420 грн</td>
+          <td class="restaurant-menu-cell2 last-cell-two" rowspan="2">400 г</td>
+          <td class="restaurant-menu-cell3 last-cell-two" rowspan="2">
+            420 грн
+          </td>
         </tr>
         <tr class="restaurant-menu-row">
           <td class="restaurant-menu-cell4 last-cell">
@@ -154,8 +157,8 @@
         </tr>
         <tr class="restaurant-menu-row">
           <td class="restaurant-menu-cell4">
-            Свіжі огірок, помідор, болгарський перець, оливки, сир бринза, листя
-            салату, соус
+            Свіжі огірок, помідор, болгарський <br />
+            перець, оливки, сир бринза, листя салату, соус
           </td>
         </tr>
         <tr class="restaurant-menu-row">
@@ -176,13 +179,13 @@
         </tr>
         <tr class="restaurant-menu-row">
           <td class="restaurant-menu-cell1 another-cell">Торт наполеон</td>
-          <td class="restaurant-menu-cell2">230 г</td>
-          <td class="restaurant-menu-cell3">300 грн</td>
+          <td class="restaurant-menu-cell2 cell-weight">230 г</td>
+          <td class="restaurant-menu-cell3 cell-price">300 грн</td>
         </tr>
         <tr class="restaurant-menu-row">
           <td class="restaurant-menu-cell1 another-cell">Торт маковий</td>
-          <td class="restaurant-menu-cell2">230 г</td>
-          <td class="restaurant-menu-cell3">300 грн</td>
+          <td class="restaurant-menu-cell2 cell-weight">230 г</td>
+          <td class="restaurant-menu-cell3 cell-price">300 грн</td>
         </tr>
         <tr class="restaurant-menu-row">
           <td class="restaurant-menu-cell1">Тірамісу</td>
@@ -196,23 +199,23 @@
         </tr>
         <tr class="restaurant-menu-row">
           <td class="restaurant-menu-cell1 another-cell">Чай чорний/зелений</td>
-          <td class="restaurant-menu-cell2">500 мл</td>
-          <td class="restaurant-menu-cell3">100 грн</td>
+          <td class="restaurant-menu-cell2 cell-weight">500 мл</td>
+          <td class="restaurant-menu-cell3 cell-price">100 грн</td>
         </tr>
         <tr class="restaurant-menu-row">
           <td class="restaurant-menu-cell1 another-cell">Еспресо</td>
-          <td class="restaurant-menu-cell2">30 мл</td>
-          <td class="restaurant-menu-cell3">100 грн</td>
+          <td class="restaurant-menu-cell2 cell-weight">30 мл</td>
+          <td class="restaurant-menu-cell3 cell-price">100 грн</td>
         </tr>
         <tr class="restaurant-menu-row">
           <td class="restaurant-menu-cell1 another-cell">Американо</td>
-          <td class="restaurant-menu-cell2">150 мл</td>
-          <td class="restaurant-menu-cell3">100 грн</td>
+          <td class="restaurant-menu-cell2 cell-weight">150 мл</td>
+          <td class="restaurant-menu-cell3 cell-price">100 грн</td>
         </tr>
         <tr class="restaurant-menu-row">
           <td class="restaurant-menu-cell1 another-cell">Капучино</td>
-          <td class="restaurant-menu-cell2">200 мл</td>
-          <td class="restaurant-menu-cell3">160 грн</td>
+          <td class="restaurant-menu-cell2 cell-weight">200 мл</td>
+          <td class="restaurant-menu-cell3 cell-price">160 грн</td>
         </tr>
         <tr class="restaurant-menu-row">
           <td class="restaurant-menu-cell1">Лате</td>
